--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TrackMyBrain",
+  "name": "TrackMyFood",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,16 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@dr.pogodin/react-native-fs": "^2.36.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-documents/picker": "^11.0.1",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/native-stack": "^7.8.1",
     "cactus-react-native": "^1.2.0",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-audio-recorder-player": "^4.5.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-nitro-modules": "^0.31.10",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.18.0"
+    "react-native-screens": "^4.18.0",
+    "react-native-tts": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
